package co.edu.utp.misiontic.cesardiaz.modelo;

public enum EstadoPedido {
    SIN_ENTREGAR, PENDIENTE_COBRAR
}
