package co.edu.utp.misiontic.cesardiaz.modelo;

public class OpcionEnsalada {
    private String nombre;

    public OpcionEnsalada(String nombre) {
        this.nombre = nombre;
    }

    public String getNombre() {
        return nombre;
    }

}
